--- a/1. Etiquetas/index.html
+++ b/1. Etiquetas/index.html
@@ -4,13 +4,13 @@
 		<title>HTML5 - Semantica</title>
 	</head>
 	<body>
-		<h1>Código Facilito - Titulo</h1>
-		<article>Contenedor para el contenido principal de la pagina</article>
-		<section>Indican las secciones de nuestra pagina</section>
-		<nav> Indica cual es la barra de navegacion de nuestra pagina</nav>
+		<h1> Código Facilito - Titúlo </h1>
+		<article> Contenedor para el contenido principal de la pagina </article>
+		<section> Indican las secciones de nuestra pagina </section>
+		<nav> Indica cual es la barra de navegacion de nuestra pagina </nav>
 		<aside> Es una seccion de la pagina pero que esta ubicada al lado izquierdo o derecho de nuestra pagina</aside>
-		<footer></footer>
-		<header></header>
+		<header> Encabezado de la pagina </header>
+		<footer> Pie de Pagina</footer>
 
 	</body>
 </html>
