Agregados varias etiquetas de formulario

--- a/2. Formularios/index.html
+++ b/2. Formularios/index.html
@@ -1,4 +1,4 @@
-html<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Formylarios en HTML5</title>
@@ -6,7 +6,13 @@ html<!DOCTYPE html>
 </head>
 <body>
 	<form action="">
+		Nombre: <input type="text"> <br>
+		Corrreo: <input type="email"> <br>
+		url: <input type="url"> <br>
+		search: <input type="search"> <br>
+		Numero Telefonico: <input type="tel"> <br>
 		
+		<input type="submit">
 	</form>
 </body>
 </html>
