Agregados etiquetas finales

--- a/2. Formularios/index.html
+++ b/2. Formularios/index.html
@@ -11,7 +11,13 @@
 		url: <input type="url"> <br>
 		search: <input type="search"> <br>
 		Numero Telefonico: <input type="tel"> <br>
-		
+		Edad: <input type="number"> <br>
+		Rango: <input type="range"> <br>
+		Fecha de Nacimiento: <input type="date"> <br>
+		datetime, time, datetime-local
+		Mes: <input type="month"> <br>
+		Semana: <input type="week"> <br>
+		Color: <input type="color">
 		<input type="submit">
 	</form>
 </body>
